updated the file name

--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,29 +1,19 @@
-<<<<<<< HEAD
-asgiref==3.2.10
-Django==3.1
-pytz==2020.1
-sqlparse==0.3.1
-=======
 asgiref==3.8.1
+astroid==3.3.9
 awsebcli==3.21.0
-blessed==1.20.0
-botocore==1.35.99
-cement==2.10.14
-certifi==2025.1.31
-charset-normalizer==3.4.1
 colorama==0.4.6
-Django==4.2.20
-idna==3.10
-jmespath==1.0.1
-pathspec==0.10.1
-python-dateutil==2.9.0.post0
-PyYAML==6.0.2
-requests==2.32.3
-semantic-version==2.10.0
-six==1.17.0
+dill==0.3.9
+Django
+iniconfig==2.1.0
+isort==6.0.1
+mccabe==0.7.0
+packaging==24.2
+platformdirs==4.3.7
+pluggy==1.5.0
+psycopg2-binary==2.9.10
+pylint==3.3.6
+pytest==8.3.5
+pytest-django==4.11.1
 sqlparse==0.5.3
-termcolor==2.5.0
-typing_extensions==4.12.2
-urllib3==1.26.20
-wcwidth==0.2.13
->>>>>>> 2e546c2 (changes to requirements)
+tomlkit==0.13.2
+tzdata==2025.1
