--- a/mysite/.elasticbeanstalk/config.yml
+++ b/mysite/.elasticbeanstalk/config.yml
@@ -1,2 +1,19 @@
+branch-defaults:
+  default:
+    environment: calorie-env
+environment-defaults:
+  calorie-env:
+    branch: null
+    repository: null
 global:
+  application_name: calorie_tracker
+  default_ec2_keyname: null
+  default_platform: Python 3.9 running on 64bit Amazon Linux 2023
+  default_region: eu-west-1
+  include_git_submodules: true
+  instance_profile: null
+  platform_name: null
+  platform_version: null
   profile: null
+  sc: null
+  workspace_type: Application
