--- a/mysite/buildspec.yml
+++ b/mysite/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      python: 3.13
+      python: 3.9
     commands:
       - pip3 install --upgrade pip
       # Install dependencies needed for running the static analysis
@@ -15,6 +15,12 @@ phases:
       - python3 --version
       - pylint $CODEBUILD_SRC_DIR/*.py --errors-only
       #- pylint $CODEBUILD_SRC_DIR/job-portal/*.py --errors-only
+
+  post_build:
+    commands:
+      - echo Build completed successfully.
+      # Add any additional commands for tasks after build (e.g., run migrations, collect static files)
+
 
 artifacts:
   files:
