--- a/mysite/buildspec.yml
+++ b/mysite/buildspec.yml
@@ -7,7 +7,8 @@ phases:
     commands:
       - pip3 install --upgrade pip
       # Install dependencies needed for running the static analysis
-      - pip3 install -r requirements.txt pylint
+      - pip install -r requirements.txt
+      - pip install pylint
 
   pre_build:
     commands:
