--- a/mysite/buildspec.yml
+++ b/mysite/buildspec.yml
@@ -13,7 +13,7 @@ phases:
   pre_build:
     commands:
       - python3 --version
-      - pylint $CODEBUILD_SRC_DIR/*.py --errors-only
+      - pylint mysite/*.py --errors-only
       # - pylint $CODEBUILD_SRC_DIR/job-portal/*.py --errors-only
 
   post_build:
